--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Website</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 <body> 
     <header>   
-        <div class="logo"><h2>DW</h2></div>
+        <div class="logo">David Williams</div>
         <nav>
             <ul id="sidebar">
                 <li><a class='navLink' href="#landing" >Home</a></li>
@@ -23,9 +24,17 @@
 
 
 <div id="landing">
-    <h1>Hello, I am <span>David</span></h1>
-    <p>Software Developer</p>
+    <h1>Hi, I am <span>David</span></h1>
+    <p>Computer Science Student @ EMU</p>
+    <a href="public/images/DavidWilliamsResume.pdf" download class="btn btn2">Checkout My Resume</a>
+    <div class="social-icons">
+        <a href="https://github.com/WilliamsDave"><i class="fa-brands fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/davidwillliamsdev/"><i class="fa-brands fa-linkedin"></i></i></a>
+    </div>     
+    
+    <div id="downbtn">
     <a href="#about"><i class="fa-solid fa-angle-down"></i></a>
+    </div>
 </div>
 
 
@@ -98,7 +107,9 @@
                 </div>
             </div>
         </div>
-        <a href="#" class="btn">See more</a>
+        <div class="project-more">
+            <a href="#" class="btn">See more</a>
+        </div>
     </div>
 </div>
 
@@ -130,7 +141,7 @@
     </div>
 </div>
 <div class="copyright">
-    <p>Copyright © David Williams</p>
+    <p>© David Williams</p>
 </div>
 </body>
 
