add links open in new tab

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <p>Computer Science Student @ EMU</p>
     <a href="public/images/DavidWilliamsResume.pdf" download class="btn btn2">Checkout My Resume</a>
     <div class="social-icons">
-        <a href="https://github.com/WilliamsDave"><i class="fa-brands fa-github"></i></a>
-        <a href="https://www.linkedin.com/in/davidwillliamsdev/"><i class="fa-brands fa-linkedin"></i></i></a>
+        <a href="https://github.com/WilliamsDave" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/davidwillliamsdev/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i></i></a>
     </div>     
     
     <div id="downbtn">
@@ -123,8 +123,8 @@
                 <p><i class="fa-solid fa-envelope"></i>david@daviddev.net</p>
                 <p><i class="fa-solid fa-phone"></i>0123456789</p>
                 <div class="social-icons">
-                    <a href="https://github.com/WilliamsDave"><i class="fa-brands fa-github"></i></a>
-                    <a href="https://www.linkedin.com/in/davidwillliamsdev/"><i class="fa-brands fa-linkedin"></i></i></a>
+                    <a href="https://github.com/WilliamsDave"target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/davidwillliamsdev/"target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i></i></a>
                 </div>
                 <a href="public/images/DavidWilliamsResume.pdf" download class="btn btn2">Download CV</a>
             </div>
