added ui changes, adjust project list

--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
             </div>
             <div class="about-col-2">
                 <h1 class="subtitle">About Me</h1>
-                <p>testatjdsif jlkjf klasjdf kldghj lkdjcvlks dcmslkvnkljefh klasj ncvxkmnvcSEK:J fbskdjvnklejfb sauioFHoIEFHJL:JKFLKFJ lkdjflnmcvEIjtestatjdsif jlkjf klasjdf kldghj lkdjcvlks dcmslkvnkljefh klasj ncvxkmnvcSEK:J fbskdjvnklejfb sauioFHoIEFHJL:JKFLKFJ lkdjflnmcvEIjtestatjdsif jlkjf klasjdf kldghj lkdjcvlks dcmslkvnkljefh klasj ncvxkmnvcSEK:J fbskdjvnklejfb sauioFHoIEFHJL:JKFLKFJ lkdjflnmcvEIj</p>
+                <p>Hi, I’m David, a passionate Computer Science student with a strong desire to learn and a drive to innovate.
+                     Currently pursuing my B.S. at Eastern Michigan University,
+                     Looking for oppurtunites to hone my skills in Programming, problem-solving, and collaborative project development.<br><br>
+                    I also train in Jiu-Jitsu, enjoy cooking, and love anything outdoors</p>
                 <div class="tab-titles">
                     <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                     <p class="tab-links" onclick="opentab('education')">Education</p>
@@ -70,8 +73,8 @@
                 </div>
                 <div class="tab-content" id="education">
                     <ul>
-                        <li><span>2021 - 2023</span><br>Associate's in Programming from Schoolcraft College</li>
-                        <li><span>2023 - Current</span><br>Bachelor's in Computer Science from Eastern Michigan University</li>
+                        <li><span>2023 - Current</span><br>Bachelor's in Computer Science from Eastern Michigan University - 4.0</li>
+                        <li><span>2021 - 2023</span><br>Associate's in Programming from Schoolcraft College - 3.9+</li>
                     </ul>
                 </div>
             </div>
@@ -84,10 +87,10 @@
         <h1 class="subtitle">My Projects</h1>
         <div class="project-list">
             <div class="project">
-                <img src="public/images/work-1.png">
+                <img src="public/images/Portfolio1.PNG">
                 <div class="layer">
-                    <h3>Project 1 Examples</h3>
-                    <p>Put the description of the project here</p>
+                    <h3>Portfolio Site</h3>
+                    <p>The site you're currently using. Made with HTML/CSS/Javascript</p>
                     <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div>
