--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
 
 
-<div id="landing">
+<section id="landing">
     <h1>Hi, I am <span>David</span></h1>
     <p>Computer Science Student @ EMU</p>
     <a href="public/images/DavidWilliamsResume.pdf" download class="btn btn2">Checkout My Resume</a>
@@ -36,12 +36,12 @@
     <div id="downbtn">
     <a href="#about"><i class="fa-solid fa-angle-down"></i></a>
     </div>
-</div>
+</section>
 
 
 
 <!--about-->
-<div id="about">
+<section id="about">
     <div class="container">
         <div class="row">
             <div class="about-col-1">
@@ -80,45 +80,68 @@
             </div>
         </div>
     </div>
-</div>
+</section>
 <!--portfolio-->
-<div id="portfolio">
-    <div class="container">
-        <h1 class="subtitle">My Projects</h1>
-        <div class="project-list">
-            <div class="project">
-                <img src="public/images/Portfolio1.PNG">
-                <div class="layer">
-                    <h3>Portfolio Site</h3>
-                    <p>The site you're currently using. Made with HTML/CSS/Javascript</p>
-                    <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
-                </div>
+<section id="portfolio">
+    <h1 class="subtitle">Projects</h1>
+    <div class="projects">
+        <article>
+            <figure>
+                <img src="public/images/Portfolio1.PNG" alt="portfolio website photo" width="100%">
+                <figcaption>
+                    <a href="https://github.com/WilliamsDave" target="_blank" rel="noopener noreferrer" >Live Demo</a>
+                    <a href="https://github.com/WilliamsDave" target="_blank" rel="noopener noreferrer" >Learn More</a>
+                </figcaption>
+            </figure>
+            <h2>Portfolio Website</h2>
+            <p>The website you're currently browsing. Made with vanilla HTML, CSS, and Javascript</p>
+            <div class="technologies">
+                <i class="fa-brands fa-html5"></i>
+                <i class="fa-brands fa-css3-alt"></i>
+                <i class="fa-brands fa-js"></i>
             </div>
-            <div class="project">
-                <img src="public/images/work-2.png">
-                <div class="layer">
-                    <h3>Project 2 Examples</h3>
-                    <p>Put the description of the project here</p>
-                    <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
-                </div>
+        </article>
+        <article>
+            <figure>
+                <img src="public/images/work-1.png" alt="portfolio website photo" width="100%">
+                <figcaption>
+                    <a href="https://github.com/WilliamsDave" target="_blank" rel="noopener noreferrer" >Live Demo</a>
+                    <a href="https://github.com/WilliamsDave" target="_blank" rel="noopener noreferrer" >Learn More</a>
+                </figcaption>
+            </figure>
+            <h2>Portfolio Website</h2>
+            <p>The website you're currently browsing. Made with vanilla HTML, CSS, and Javascript</p>
+            <div class="technologies">
+                <i class="fa-brands fa-html5"></i>
+                <i class="fa-brands fa-css3-alt"></i>
+                <i class="fa-brands fa-js"></i>
             </div>
-            <div class="project">
-                <img src="public/images/work-3.png">
-                <div class="layer">
-                    <h3>Project 3 Examples</h3>
-                    <p>Put the description of the project here</p>
-                    <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
-                </div>
+        </article>
+        <article>
+            <figure>
+                <img src="public/images/Portfolio.PNG" alt="portfolio website photo" width="100%">
+                                <figcaption>
+                    <a href="https://github.com/WilliamsDave" target="_blank" rel="noopener noreferrer" >Live Demo</a>
+                    <a href="https://github.com/WilliamsDave" target="_blank" rel="noopener noreferrer" >Learn More</a>
+                </figcaption>
+            </figure>
+            <h2>Portfolio Website</h2>
+            <p>The website you're currently browsing. Made with vanilla HTML, CSS, and Javascript</p>
+            <div class="technologies">
+                <i class="fa-brands fa-html5"></i>
+                <i class="fa-brands fa-css3-alt"></i>
+                <i class="fa-brands fa-js"></i>
             </div>
-        </div>
-        <div class="project-more">
-            <a href="#" class="btn">See more</a>
-        </div>
+        </article>
     </div>
-</div>
+    <div class="project-more">
+        <a href="#" class="btn">See more</a>
+    </div>
+    
+</section>
 
 <!--contact-->
-<div id="contact">
+<section id="contact">
     <div class="container">
         <div class="row">
             <div class="contact-left">
@@ -127,7 +150,7 @@
                 <p><i class="fa-solid fa-phone"></i>0123456789</p>
                 <div class="social-icons">
                     <a href="https://github.com/WilliamsDave"target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
-                    <a href="https://www.linkedin.com/in/davidwillliamsdev/"target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i></i></a>
+                    <a href="https://www.linkedin.com/in/davidwillliamsdev/"target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
                 <a href="public/images/DavidWilliamsResume.pdf" download class="btn btn2">Download CV</a>
             </div>
@@ -143,10 +166,10 @@
 
         </div>
     </div>
-</div>
-<div class="copyright">
+</section>
+<section class="copyright">
     <p>© David Williams</p>
-</div>
+</section>
 <script src="scripts.js"></script>
 <script src="https://kit.fontawesome.com/e59125f2c5.js" crossorigin="anonymous"></script>
 </body>
