added skill icons on about me

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <div class="swiper-button-next"></div>
                     </div>
 
-                    
+
                 </div>
                 <div class="about-col-2">
                     <h1 class="subtitle">About Me</h1>
@@ -78,10 +78,28 @@
                     </div>
                     <div class="tab-content active-tab" id="skills">
                         <ul>
-                            <li><span>Java</span><br>Blah Blah blah blah</li>
-                            <li><span>Web Development</span><br>Blah Blah blah blahBlah Blah blah blahBlah Blah blah
-                                blah</li>
-                            <li><span>C++</span><br>Blah Blah blah blahBlah Blah blah blah</li>
+                            <li>
+                                <span>Front-End</span>
+                                <ul class="techstack">
+                                    <li>Javascript</li>
+                                    <li>HTML</li>
+                                    <li>CSS</i></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <span>Back-End</span>
+                                <ul class="techstack">
+                                    <li>Java</li>
+                                    <li>Python</li>
+                                </ul>
+                            </li>
+                            <li>
+                                <span>Frameworks</span>
+                                <ul class="techstack">
+                                    <li>Temp</li>
+                                    <li>Temporary</li>
+                                </ul>
+                            </li>
                         </ul>
                     </div>
                     <div class="tab-content" id="experience">
