added about me ui changes

--- a/index.html
+++ b/index.html
@@ -63,57 +63,62 @@
 
                 </div>
                 <div class="about-col-2">
-                    <h1 class="subtitle">About Me</h1>
-                    <p>Hi, I’m David, a passionate Computer Science student with a strong desire to learn and a drive to
-                        innovate.
-                        Currently pursuing my B.S. at Eastern Michigan University,
-                        Looking for oppurtunites to hone my skills in Programming, problem-solving, and collaborative
-                        project development.<br><br>
-                        I also train in Jiu-Jitsu, enjoy cooking, and love anything outdoors</p>
-                    <div class="tab-titles">
-                        <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
-                        <p class="tab-links" onclick="opentab('education')">Education</p>
-                        <p class="tab-links" onclick="opentab('experience')">Experience</p>
+                    <div class="box-design">
+                        <h1 class="subtitle">About Me</h1>
+                        <p>Hi, I’m David, a passionate Computer Science student with a strong desire to learn and a
+                            drive to
+                            innovate.
+                            Currently pursuing my B.S. at Eastern Michigan University,
+                            Looking for oppurtunites to hone my skills in Programming, problem-solving, and
+                            collaborative
+                            project development.<br><br>
+                            I also train in Jiu-Jitsu, enjoy cooking, and love anything outdoors</p>
+                        <div class="tab-titles">
+                            <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
+                            <p class="tab-links" onclick="opentab('education')">Education</p>
+                            <p class="tab-links" onclick="opentab('experience')">Experience</p>
 
-                    </div>
-                    <div class="tab-content active-tab" id="skills">
-                        <ul>
-                            <li>
-                                <span>Front-End</span>
-                                <ul class="techstack">
-                                    <li>Javascript</li>
-                                    <li>HTML</li>
-                                    <li>CSS</i></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <span>Back-End</span>
-                                <ul class="techstack">
-                                    <li>Java</li>
-                                    <li>Python</li>
-                                </ul>
-                            </li>
-                            <li>
-                                <span>Frameworks</span>
-                                <ul class="techstack">
-                                    <li>Temp</li>
-                                    <li>Temporary</li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="tab-content" id="experience">
-                        <ul>
-                            <li><span>2021 - Current</span><br>Server at Blackrock Bar and Grill</li>
-                        </ul>
-                    </div>
-                    <div class="tab-content" id="education">
-                        <ul>
-                            <li><span>2023 - Current</span><br>Bachelor's in Computer Science from Eastern Michigan
-                                University - 4.0</li>
-                            <li><span>2021 - 2023</span><br>Associate's in Programming from Schoolcraft College - 3.9+
-                            </li>
-                        </ul>
+                        </div>
+                        <div class="tab-content active-tab" id="skills">
+                            <ul>
+                                <li>
+                                    <span>Front-End</span>
+                                    <ul class="techstack">
+                                        <li>Javascript</li>
+                                        <li>HTML</li>
+                                        <li>CSS</i></li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <span>Back-End</span>
+                                    <ul class="techstack">
+                                        <li>Java</li>
+                                        <li>Python</li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <span>Frameworks</span>
+                                    <ul class="techstack">
+                                        <li>Temp</li>
+                                        <li>Temporary</li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="tab-content" id="experience">
+                            <ul>
+                                <li><span>2021 - Current</span><br>Server at Blackrock Bar and Grill</li>
+                            </ul>
+                        </div>
+                        <div class="tab-content" id="education">
+                            <ul>
+                                <li><span>2023 - Current</span><br>Bachelor's in Computer Science from Eastern Michigan
+                                    University - 4.0</li>
+                                <li><span>2021 - 2023</span><br>Associate's in Programming from Schoolcraft College -
+                                    3.9+
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
