added projects ui changes

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <div class="projects">
             <article>
                 <figure>
-                    <img src="public/images/Portfolio1.PNG" alt="portfolio website photo" width="100%">
+                    <img src="public/images/Portfolio.PNG" alt="portfolio website photo" width="100%">
                     <figcaption>
                         <a href="https://github.com/WilliamsDave" target="_blank" rel="noopener noreferrer">Live
                             Demo</a>
@@ -148,7 +148,7 @@
             </article>
             <article>
                 <figure>
-                    <img src="public/images/work-1.png" alt="portfolio website photo" width="100%">
+                    <img src="public/images/Portfolio.PNG" alt="portfolio website photo" width="100%">
                     <figcaption>
                         <a href="https://github.com/WilliamsDave" target="_blank" rel="noopener noreferrer">Live
                             Demo</a>
