added polish and fixes

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section id="landing">
         <h1>Hi, I am <span>David</span></h1>
         <p>Computer Science Student @ EMU</p>
-        <a href="public/images/DavidWilliamsResume.pdf" download class="btn btn2">Checkout My Resume</a>
+        <a href="public/images/WilliamsResume.pdf" download class="btn btn2">Checkout My Resume</a>
         <div class="social-icons">
             <a href="https://github.com/WilliamsDave" target="_blank" rel="noopener noreferrer"><i
                     class="fa-brands fa-github"></i></a>
@@ -84,7 +84,7 @@
                                     <ul class="techstack">
                                         <li>Javascript</li>
                                         <li>HTML</li>
-                                        <li>CSS</i></li>
+                                        <li>CSS</li>
                                     </ul>
                                 </li>
                                 <li>
@@ -97,8 +97,10 @@
                                 <li>
                                     <span>Frameworks</span>
                                     <ul class="techstack">
-                                        <li>Temp</li>
-                                        <li>Temporary</li>
+                                        <li>React</li>
+                                        <li>Tailwind</li>
+                                        <li>Next.js</li>
+                                        <li>Flask</li>
                                     </ul>
                                 </li>
                             </ul>
@@ -110,9 +112,9 @@
                         </div>
                         <div class="tab-content" id="education">
                             <ul>
-                                <li><span>2023 - Current</span><br>Bachelor's in Computer Science from Eastern Michigan
+                                <li><span>2024 - Current</span><br>Bachelor's in Computer Science from Eastern Michigan
                                     University - 4.0</li>
-                                <li><span>2021 - 2023</span><br>Associate's in Programming from Schoolcraft College -
+                                <li><span>2022 - 2023</span><br>Associate's in Programming from Schoolcraft College -
                                     3.9+
                                 </li>
                             </ul>
@@ -130,14 +132,14 @@
                 <figure>
                     <img src="public/images/Portfolio.PNG" alt="portfolio website photo" width="100%">
                     <figcaption>
-                        <a href="https://github.com/WilliamsDave" target="_blank" rel="noopener noreferrer">Live
+                        <a href="https://daviddev.net/" target="_blank" rel="noopener noreferrer">Live
                             Demo</a>
-                        <a href="https://github.com/WilliamsDave" target="_blank" rel="noopener noreferrer">Learn
+                        <a href="https://github.com/WilliamsDave/WilliamsDave.github.io" target="_blank" rel="noopener noreferrer">Learn
                             More</a>
                     </figcaption>
                 </figure>
                 <h2>Portfolio Website</h2>
-                <p>The website you're currently browsing. Made with vanilla HTML, CSS, and Javascript</p>
+                <p>The website you're currently browsing. Made using vanilla HTML, CSS, and JavaScript to allow full control over functionality and aesthetics</p>
                 <div class="technologies">
                     <i class="fa-brands fa-html5"></i>
                     <i class="fa-brands fa-css3-alt"></i>
@@ -146,17 +148,16 @@
             </article>
             <article>
                 <figure>
-                    <img src="public/images/Portfolio.PNG" alt="portfolio website photo" width="100%">
+                    <img src="public/images/Ai-Site.PNG" alt="portfolio website photo" width="100%">
                     <figcaption>
-                        <a href="https://github.com/WilliamsDave" target="_blank" rel="noopener noreferrer">Live
-                            Demo</a>
-                        <a href="https://github.com/WilliamsDave" target="_blank" rel="noopener noreferrer">Learn
+                        <a href="https://github.com/WilliamsDave/Shopping-AI" target="_blank" rel="noopener noreferrer">Learn
                             More</a>
                     </figcaption>
                 </figure>
-                <h2>Portfolio Website</h2>
-                <p>The website you're currently browsing. Made with vanilla HTML, CSS, and Javascript</p>
+                <h2>AI Item Recommendations</h2>
+                <p>Utilizes machine learning and market basket analysis with the apriori algorithm to provide insight into user purchase patterns. Made using Flask, JavaScript, HTML, and CSS</p>
                 <div class="technologies">
+                    <i class="fa-brands fa-python"></i>
                     <i class="fa-brands fa-html5"></i>
                     <i class="fa-brands fa-css3-alt"></i>
                     <i class="fa-brands fa-js"></i>
@@ -164,16 +165,16 @@
             </article>
             <article>
                 <figure>
-                    <img src="public/images/Portfolio.PNG" alt="portfolio website photo" width="100%">
+                    <img src="public/images/Card-game.PNG" alt="portfolio website photo" width="100%">
                     <figcaption>
-                        <a href="https://github.com/WilliamsDave" target="_blank" rel="noopener noreferrer">Live
+                        <a href="https://daviddev.net/card-games/" target="_blank" rel="noopener noreferrer">Live
                             Demo</a>
-                        <a href="https://github.com/WilliamsDave" target="_blank" rel="noopener noreferrer">Learn
+                        <a href="https://github.com/WilliamsDave/card-games" target="_blank" rel="noopener noreferrer">Learn
                             More</a>
                     </figcaption>
                 </figure>
-                <h2>Portfolio Website</h2>
-                <p>The website you're currently browsing. Made with vanilla HTML, CSS, and Javascript</p>
+                <h2>Card Game Site</h2>
+                <p>Interactive blackjack game made to be reusable and scalable to allow for the addition of more games in the future. Made using JavaScript, HTML, and Tailwind CSS</p>
                 <div class="technologies">
                     <i class="fa-brands fa-html5"></i>
                     <i class="fa-brands fa-css3-alt"></i>
@@ -191,14 +192,14 @@
                 <div class="contact-left">
                     <h1 class="subtitle">Contact Me</h1>
                     <p><i class="fa-solid fa-envelope"></i>david@daviddev.net</p>
-                    <p><i class="fa-solid fa-phone"></i>0123456789</p>
+                    <p><i class="fa-solid fa-phone"></i>734-846-9785</p>
                     <div class="social-icons">
                         <a href="https://github.com/WilliamsDave" target="_blank" rel="noopener noreferrer"><i
                                 class="fa-brands fa-github"></i></a>
                         <a href="https://www.linkedin.com/in/davidwillliamsdev/" target="_blank"
                             rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
-                    <a href="public/images/DavidWilliamsResume.pdf" download class="btn btn2">Download CV</a>
+                    <a href="public/images/WilliamsResume.pdf" download class="btn btn2">Download CV</a>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
