--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
                         </div>
                         <div class="tab-content" id="experience">
                             <ul>
-                                <li><span>2021 - Current</span><br>Server at Blackrock Bar and Grill</li>
+                                <li><span>2024 - Current</span><br>AI Model Trainer at Outlier</li>
+                                <li><span>2021 - 2024</span><br>Server at Blackrock Bar and Grill</li>
                             </ul>
                         </div>
                         <div class="tab-content" id="education">
